--- a/src/styles/Leaderboard.css
+++ b/src/styles/Leaderboard.css
@@ -4,6 +4,17 @@
     align-items: center;
 }
 
+.leaderboardtext {
+    font-size: 16px;
+}
+
+.filterbuttons {
+    /* margin-left: 7.5rem; */
+    margin-top: 0;
+    display: flex;
+    align-content: flex-end;
+}
+
 #weekform {
     margin-left: 15px;
 }
@@ -40,7 +51,7 @@
     border: none;
     border: 2px;
     border-radius: 2px;
-    box-shadow: 1px 1px 1px 0.5px;
+    box-shadow: 0px 1px 9px 0px rgba(35, 35, 35, 0.22);
     background-color: white;
     width: 100%;
     font-size: 14px;
@@ -174,7 +185,8 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 10px;
+    margin-left: 5px;
+    margin-right: 10px;
 }
 
 input[type=search] {
@@ -203,18 +215,15 @@ input:focus {
 }
 
 @media only all and (max-width: 400px) {
-    .Searchform {
-        margin-left: -7.3rem;
-    }
 
     .table-items {
         font-size: 0.7rem;
     }
 
-    .filterbuttons {
+    /* .filterbuttons {
         margin-left: 1rem;
         margin-right: auto;
-    }
+    } */
 
     input[type=search] {
         padding: 0;
@@ -244,14 +253,6 @@ input:focus {
         display: block;
     }
 
-    .filterbuttons {
-        margin-left: 7.5rem;
-        margin-top: 0;
-        display: flex;
-        align-content: flex-end;
-
-    }
-
     /* #season,
     #weekly {
         padding: 0.4rem 0rem 0.4rem 0rem;
@@ -267,12 +268,6 @@ input:focus {
 
     .LeaderboardSearchIcon {
         margin: 0.3rem 0.5rem 0.3rem 0.5rem;
-    }
-
-    .leaderboardtext {
-        /* height: 2rem; */
-        white-space: nowrap;
-
     }
 
     /* select {
@@ -293,11 +288,15 @@ input:focus {
     }
 
     .Searchform {
-        margin-left: 2rem;
+        margin-left: 1rem;
         margin-top: 0;
         margin-bottom: 0;
-        max-width: 150px;
+        max-width: 200px;
         font-size: 16px;
+    }
+
+    .leaderboardtext {
+        font-size: 18px;
     }
 }
 
